--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,15 @@
     font-optical-sizing: auto;
     font-size: normal;
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-in-out forwards;
+}
